# aryaos

./: .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  ansible.cfg  build.sh  config  config.docker  docker-compose.apt-cacher.yml  inventory.yml  mkdocs.yml  pyproject.toml  requirements.yml  site.yml  test.sh  vars.yml
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
ansible/: Makefile  ansible.cfg  inventory.yml  playbook.yaml  secret  site.yml  vars.yml  vault.txt
docs/: .__atomic-write07f5af4a  CNAME  TODO  agent-handoff.md  airtak_cuas_getting_started.md  bluetooth-pan.md  build.md  config.md  definitions.md  dev-pi.md  dhbridge.md  dronehone-bridge.md  index.md  install.md  intro.md  node-red.md  portal.md  purchase.md  requirements.in  requirements.txt  roadmap.md  security-audit-baseline.md  security.md  specs.md  testing-dev-pi.md  (+1 more)
dronehone-bridge/: README.md  pyproject.toml
dronehone-bridge/debian/: changelog  control  copyright  dronehone-bridge.default  dronehone-bridge.install  dronehone-bridge.service  rules
dronehone-bridge/docs/: dronehone-bluetooth-protocol.md
dronehone-bridge/dronehone_bridge/: __init__.py  __main__.py  cli.py  config.py  constants.py  hub.py
dronehone-bridge/dronehone_bridge/ingest/: __init__.py  mqtt_worker.py
dronehone-bridge/dronehone_bridge/map/: __init__.py  dronehone_json.py
dronehone-bridge/dronehone_bridge/transport/: __init__.py  ble_advertiser.py  rfcomm_server.py
dronehone-bridge/tests/: test_ble_encode.py  test_mapper.py
(+662 files in other folders)
